force-app/main/default/objects/MA_Page_Content_Version__c/MA_Page_Content_Version__c.object-meta.xml
<CustomObject>
    <label>Page Content Version</label>
    <nameField>
        <displayFormat>PCV-{0000}</displayFormat>
        <label>Version Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Page Content Versions</pluralLabel>
</CustomObject>