force-app/main/default/objects/MA_Page_Content_Version__c/fields/Change_Summary__c.field-meta.xml
<CustomField>
    <fullName>Change_Summary__c</fullName>
    <description>Brief description of what changed in this version</description>
    <label>Change Summary</label>
    <length>1000</length>
    <type>Text</type>
</CustomField>