force-app/main/default/objects/MA_Page_Content_Version__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>The Master record this version is for</description>
    <label>Content</label>
    <referenceTo>MA_Page_Content__c</referenceTo>
    <relationshipLabel>Versions</relationshipLabel>
    <relationshipName>Versions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>