force-app/main/default/objects/MA_Page_Content_Version__c/fields/Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Snapshot__c</fullName>
    <description>JSON snapshot of the content value at this version</description>
    <label>Snapshot</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>